--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
     "@reduxjs/toolkit": "^1.9.7",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.2.0",
     "@tanstack/react-query": "^5.12.2",
     "@tanstack/react-query-devtools": "^5.13.3",
     "@testing-library/jest-dom": "^5.17.0",
@@ -14,6 +16,7 @@
     "@types/node": "^16.18.66",
     "@types/react": "^18.2.39",
     "@types/react-dom": "^18.2.17",
+    "@types/uuid": "^9.0.7",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
     "downshift": "^8.2.3",
@@ -31,7 +34,9 @@
     "react-scripts": "^5.0.1",
     "react-select": "^5.8.0",
     "react-simple-captcha": "^9.3.0",
+    "stripe": "^14.8.0",
     "typescript": "^4.9.5",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
